fix mobile about us spacing

--- a/src/App.css
+++ b/src/App.css
@@ -777,6 +777,7 @@ padding-left: 75%;
     font-weight:bold;
     text-align:center;
     color:#ae272e;
+    margin-top: 0;
   }
   
   .about-right p{
